# language-lab

./: .gitignore  CMakeLists.txt  Makefile  README.md
ada/: .gitignore  README.md
ada/core/: alire.toml  core.gpr
assembly/: .gitignore  README.md
assembly/arm64/: Makefile
c/: README.md
c/core/: Makefile
clojure/: .gitignore
clojure/core/: README.md  project.clj
cobol/: .gitignore  README.md
cobol/core/: Makefile
cpp/: .gitignore  README.md
cpp/core/: CMakeLists.txt
cpp/core/include/: greeting.hpp
cpp/core/src/: greeting.cpp  main.cpp
cpp/core/test/: test_greeting.cpp
cuncurency/: new_thread  new_thread.c
fortran/: README.md
fortran/core/: Makefile
go/: .gitignore  README.md
go/core/: Makefile  go.mod
haskell/: .gitignore  README.md
haskell/core/: Makefile  package.yaml  stack.yaml
java/: README.md
java/akka/: pom.xml
java/core/: pom.xml
javascript/: README.md
javascript/core/: .eslintrc.json  .gitignore  package-lock.json  package.json
kotlin/: README.md
kotlin/core/: .gitignore  build.gradle.kts  settings.gradle.kts
lisp/: .gitignore  README.md
lisp/core/: Makefile  mylab.asd
pascal/: .gitignore  README.md
pascal/core/: Makefile
perl/: .gitignore  README.md
perl/core/: Makefile.PL
python/: .gitignore  README.md
python/core/: .pre-commit-config.yaml  pyproject.toml
qbasic/: .gitignore  README.md
qbasic/core/: Makefile
ruby/: .gitignore  README.md
ruby/core/: Gemfile  Rakefile
rust/: README.md
rust/core/: Makefile
shell/: .gitignore  README.md
sql/: .gitignore  Makefile  README.md
sql/config/: .env
sql/data/: seed.sql
sql/migrations/: V1__init.sql
sql/queries/: report_queries.sql
sql/schema/: init.sql
sql/tests/: test_constraints.sql
src/: CMakeLists.txt  new_thread.c
src/functional/: mimic_filter.c  mimic_map.c
src/io/text/: output.txt  read_text_file.c
typescript/: .gitignore  README.md
typescript/core/: .eslintrc.json  package-lock.json  package.json  (+1 more)
(+266 files in other folders)
